--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300display=swap');
 
+:root {
+  --primary-color: #2e7d32;
+  --primary-light-color: #60ad5e;
+  --primary-dark-color: #005005;
+  --primary-text-color: #ffffff;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,22 +14,84 @@
 }
 
 body {
+  font-size: 16px;
   font-family: 'Lato', sans-serif;
   line-height: 1.6;
 }
 
-
 h1,
-h2 {
+h2,
+h3 {
   font-weight: 300;
   line-height: 1.2;
-  margin: 10px 0;
 }
 
-p {
-  margin: 10px 0;
+a {
+  text-decoration: none;
+}
+
+label {
+  font-size: 0.7rem;
+  font-weight: 700;
 }
 
 img {
   width: 100%;
+}
+
+hr {
+  border: 1px solid #eee;
+  border-top: none;
+  margin: 0.5rem 0;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 1.5rem;
+  height: 100%;
+}
+
+.form-control input[type='text'],
+.form-control input[type='password'] {
+  border: 1px solid #777;
+  width: 100%;
+  padding: 0.5rem;
+  border-radius: 3px;
+}
+
+.form-control input:focus {
+  outline: none;
+}
+
+input[type='submit'] {
+  font-size: inherit;
+  font-family: inherit;
+  line-height: inherit;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  background-color: var(--primary-color);
+  color: #fff;
+  border: none;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.btn--outline {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.btn-full {
+  width: 100%;
+  text-align: center;
+}
+
+.btn:hover {
+  transform: scale(0.98);
 }
