--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,16 @@
   --primary-color: #2e7d32;
   --primary-light-color: #60ad5e;
   --primary-dark-color: #005005;
+
+  --secondary-color: #f1f7ed;
+  --secondary-light-color: #ffffff;
+  --secondary-dark-color: #bec4bb;
+
   --primary-text-color: #ffffff;
+  --primary-gray-color: #f5f5f6;
+  --secondary-gray-color: #e1e2e1;
+
+  --orange: #E56A0A
 }
 
 * {
@@ -74,7 +83,6 @@ input[type='submit'] {
   line-height: inherit;
 }
 
-
 /* Home */
 
 .showcase {
@@ -129,19 +137,19 @@ input[type='submit'] {
   .showcase {
     height: auto;
   }
- .container--showcase {
-  grid-template-columns: repeat(1, 1fr);
- }
+  .container--showcase {
+    grid-template-columns: repeat(1, 1fr);
+  }
 
- .showcase__section {
-   text-align: center;
- }
+  .showcase__section {
+    text-align: center;
+  }
 
- .showcase__form {
-   top: 0;
-   height: auto;
-   justify-self: center;
- }
+  .showcase__form {
+    top: 0;
+    height: auto;
+    justify-self: center;
+  }
 }
 
 .stats {
@@ -191,12 +199,48 @@ input[type='submit'] {
 }
 
 .application-list {
- 
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 0.5rem;
 }
 
 /* Dashboard */
 .applications {
   /* border: solid 1px blue;; */
+}
 
+.application__description {
+  font-size: 0.75rem;
+}
+
+.detail__text {
+  color: var(--primary-light-color);
+  margin-bottom: 0.75rem;
+}
+
+.detail__text--key {
+  margin-right: 1rem;
+}
+
+.application__key {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 600px) {
+  /* border: solid 1px red;; */
+  .container--dashboard {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.fa-eye, .fa-eye-slash{
+  color: var(--primary-color)
+  /* color: #000 */
+  /* color: #E56A0A */
 }
 
