--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,23 +1,37 @@
 .btn {
-    display: inline-block;
-    padding: 0.5rem 2rem;
-    cursor: pointer;
+  display: inline-block;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  border: none;
+  margin-bottom: 0.5rem;
+}
+
+.btn--outline {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.btn--full {
+  width: 100%;
+  text-align: center;
+}
+
+.btn--primary {
     background-color: var(--primary-color);
     color: #fff;
-    border: none;
-    margin-bottom: 0.5rem;
-  }
-  
-  .btn--outline {
-    background-color: transparent;
-    border: 1px solid #fff;
-  }
-  
-  .btn--full {
-    width: 100%;
-    text-align: center;
-  }
-  
-  .btn:hover {
-    transform: scale(0.98);
-  }
+}
+
+.btn--secondary {
+    background-color: var(--secondary-color);
+    color: #000;
+    font-size: 0.75rem;
+}
+
+.btn--medium {
+    font-size: 0.75rem;
+}
+
+
+.btn:hover {
+  transform: scale(0.98);
+}
