--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -11,58 +11,20 @@
   }
   
   .sidebar__menu-link {
-    color: var(--primary-dark-color);
+    color: #000;
     text-decoration: none;
     display: inline-block;
     width: 100%;
     padding: 0.5rem;
-    border: 1px solid lightgray;
+    border: 1px solid var(--secondary-gray-color);
     
   }
-  
-  .header__menu-link:hover {
-    background-color: var(--primary-dark-color);
-    transition: all 0.2s ease-out;
-  }
-  
-  .header__menu-icon {
-    display: none;
-  }
-  
-  @media screen and (max-width: 900px) {
-    .header__menu {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      height: 100%;
-      top: 54px;
-      left: -100%;
-      transition: all 0.5s ease-in-out;
-      z-index: 999;
-    }
-  
-    .header__menu--active {
-      background: var(--primary-color);
-      width: 100%;
-      left: 0%;
-      transition: all 0.5s ease-in-out;
-    }
-  
-    .header__menu-link {
-      text-align: center;
-      padding: 1rem;
-      width: 100%;
-      display: table;
-    }
-  
-    .header__menu-link:hover {
-      background-color: var(--primary-dark-color);
-      border-radius: 0;
-    }
-  
-    .header__menu-icon {
-      display: block;
-      cursor: pointer;
+    
+  @media screen and (max-width: 600px) {
+    .sidebar__menu {
+      /* border: solid 1px red; */
+      flex-direction: row;
+      justify-content: center;
     }
   }
   
