--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -6,9 +6,26 @@
   margin-bottom: 0.5rem;
 }
 
+.btn--primary {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.btn--secondary {
+  background-color: var(--secondary-color);
+  color: #000;
+  font-size: 0.75rem;
+}
+
 .btn--outline {
   background-color: transparent;
   border: 1px solid #fff;
+}
+
+.btn--disabled {
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000
 }
 
 .btn--full {
@@ -16,16 +33,6 @@
   text-align: center;
 }
 
-.btn--primary {
-    background-color: var(--primary-color);
-    color: #fff;
-}
-
-.btn--secondary {
-    background-color: var(--secondary-color);
-    color: #000;
-    font-size: 0.75rem;
-}
 
 .btn--medium {
     font-size: 0.75rem;
