--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   --primary-gray-color: #f5f5f6;
   --secondary-gray-color: #e1e2e1;
 
-  --orange: #E56A0A
+  --orange: #e56a0a;
 }
 
 * {
@@ -52,6 +52,52 @@ hr {
   border: 1px solid #eee;
   border-top: none;
   margin: 0.5rem 0;
+}
+
+.btn {
+  display: inline-block;
+  padding: 0.5rem 2rem;
+  cursor: pointer;
+  border: none;
+  margin-bottom: 0.5rem;
+  outline: none;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+.btn--primary {
+  background-color: var(--primary-color);
+  color: #fff;
+}
+
+.btn--secondary {
+  background-color: var(--secondary-color);
+  color: #000;
+  font-size: 0.75rem;
+}
+
+.btn--outline {
+  background-color: transparent;
+  border: 1px solid #fff;
+}
+
+.btn--disabled {
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
+}
+
+.btn--full {
+  width: 100%;
+  text-align: center;
+}
+
+.btn--medium {
+  font-size: 0.75rem;
+}
+
+.btn:hover {
+  transform: scale(0.98);
 }
 
 .container {
@@ -244,8 +290,9 @@ input[type='submit'] {
   }
 }
 
-.fa-eye, .fa-eye-slash{
-  color: var(--primary-color)
+.fa-eye,
+.fa-eye-slash {
+  color: var(--primary-color);
   /* color: #000 */
   /* color: #E56A0A */
 }
@@ -255,4 +302,3 @@ input[type='submit'] {
   grid-template-columns: 1fr 1fr;
   column-gap: 0.5rem;
 }
-
