--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   --secondary-gray-color: #e1e2e1;
 
   --orange: #e56a0a;
+  
+  --primary-message-color: #dc3545;
+  --dark-message-color: #333333;
+  --light-message-color: #f4f4f4;
+  --danger-message-color: #dc3545;
+  --success-message-color: #28a745;
 }
 
 * {
@@ -239,9 +245,8 @@ input[type='submit'] {
   /* border: solid 1px red;; */
   display: grid;
   grid-template-columns: 1fr 3fr;
-  gap: 20px;
+  column-gap: 20px;
   justify-content: center;
-  align-items: center;
 }
 
 .application-list {
@@ -284,9 +289,12 @@ input[type='submit'] {
   .container--dashboard {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 20px;
+    column-gap: 20px;
     justify-content: center;
-    align-items: center;
+  }
+
+  .applications, .account, .usage{
+    margin-top: 1rem
   }
 }
 
