--- a/src/components/SubHeader/SubHeader.css
+++ b/src/components/SubHeader/SubHeader.css
@@ -1,4 +1,8 @@
 .sub-header {
+    /* background-image: url("background.png");
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: cover; */
     background-color: var(--primary-color);
     height: 150px;
 }
@@ -16,3 +20,4 @@
 .sub-header__text {
     color: #fff;
 }
+
