--- a/src/App.css
+++ b/src/App.css
@@ -293,7 +293,7 @@ input[type='submit'] {
     justify-content: center;
   }
 
-  .applications, .account, .usage{
+  .applications, .application, .account, .usage{
     margin-top: 1rem
   }
 }
